k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hello-world
            port:
              number: 4001
        path: /
        pathType: Exact
